...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuration required"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Could not start Podkop"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "More"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign in to continue"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Upcoming"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add link"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Comments"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entries"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Links"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorites"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hits"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keep writing"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Messages"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rank"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Retry"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show adult content"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign in"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Publish"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Title"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Downvote"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "More actions"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove downvote"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show spoiler"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Include parent"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "duplicate"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "spam"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Screenshot preview"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Share as screenshot"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show diggers"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Copy image"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Manage blacklists"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sign out"
          }
        },
...
